--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "npm": ">=9.0.0"
   },
   "dependencies": {
+    "gsap": "^3.12.2",
     "crypto-js": "^4.2.0",
     "chart.js": "^4.4.0",
     "date-fns": "^2.30.0"
